# FableForge

./: .gitignore  README.md  agent.md  main.py  pyproject.toml  utilities.py
.github/workflows/: project-auto-link.yml  tests.yml
.github/workflows/scripts/: create_fableforge_issues.sh
.github/workflows/templates/: issue-template.md
code/: database_manager.py  main.py  quest_one.py  quest_two.py  quests.py  utilities.py
rich/: table.py
src/fableforge/: database_manager.py  main.py  menus.py  quest_one.py  quest_two.py  quests.py  utilities.py
src/fableforge/data/: database_manager.py  models.py
src/fableforge/engine/: dialogue.py  main.py
src/fableforge/quests/: __init__.py  quest_one.py  quest_two.py
src/fableforge/quests/whisper_quest/: __init__.py  scene_conclusion.py  scene_encounter.py  scene_intro.py  scene_puzzle.py
src/fableforge/quests/whisper_quest/encounters/: __init__.py  scene_encounter1.py  scene_encounter2.py  scene_encounter3.py  scene_encounter4.py
src/fableforge/utils/: style.py  utilities.py
tests/: conftest.py  test_character_creator.py  test_database_errors.py  test_database_manager.py  test_main_menu.py  test_menu.py
tests/stubs/rich/: console.py
