[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fableforge"
version = "0.1.0"
description = "Text-driven D&D-style adventure game"
authors = [{ name = "Noah Weeks", email = "weeks.it.solutions@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

# If you add external libs, list them here
dependencies = [
    # "rich>=13.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]


[tool.setuptools]
package-dir = { "" = "src" }          
packages = ["fableforge"]             


[project.scripts]
fableforge = "fableforge.main:main"

[project.urls]
Homepage = "https://github.com/Coding-for-Weeks/FableForge"
Issues = "https://github.com/Coding-for-Weeks/FableForge/issues"